# stake-o-matic

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  RELEASE.md  clean-score-all-mainnet.bash  decrypt.sh  docker-build.bash  docker-run.bash  encrypt.sh  fetch-release.sh  import-into-sqlite.sh  patch.crates-io.sh  score-all-mainnet.sh  score-all-testnet.sh  score-all.sh  solana-foundation-delegation-program-x86_64-apple-darwin  solana-foundation-delegation-program-x86_64-unknown-linux-gnu  solana-stake-o-matic-x86_64-apple-darwin  solana-stake-o-matic-x86_64-unknown-linux-gnu  stake-o-matic.sh  update-solana-dependencies.sh
.buildkite/: pipeline.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  main.yml  release.yml  release.yml2  test.yml
assets/: exclude.yml.enc
bot/: Cargo.toml
bot/src/: data_center_info.rs  db.rs  export.rs  generic_stake_pool.rs  legacy_stake_pool.rs  main.rs  noop_stake_pool.rs  performance_db_utils.rs  rpc_client_utils.rs  slack_utils.rs  stake_pool.rs  stake_pool_v0.rs  validator_list.rs  validators_app.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  processor.rs  state.rs
pubkeys/: ab.pub  listkey.pub
sql/: average-epochs.sql  average.sql  check-commision-changes.sql  control.sql  copy-from-scores2.sql  fields-list.sql  fixes.sql  import.sql  queries.sql  test-queries.sql
src/: confirmed_block_cache.rs  data_center_info.rs  db.rs  generic_stake_pool.rs  legacy_stake_pool.rs  main.rs  rpc_client_utils.rs  stake_pool.rs  stake_pool_v0.rs  validator_list.rs  validators_app.rs
