[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "I will find you and I will stake you"
edition = "2018"
homepage = "https://solana.com/"
documentation = "https://docs.rs/"
license = "Apache-2.0"
name = "solana-stake-o-matic"
repository = "https://github.com/solana-labs/stake-o-matic"
version = "0.0.0"

[dependencies]
clap = "2.33.0"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "0.9.0"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.13"
solana-clap-utils = "1.6"
solana-client = "1.6"
solana-cli-config = "1.6"
solana-cli-output = "1.6"
solana-logger = "1.6"
solana-metrics = "1.6"
solana-notifier = "1.6"
solana-sdk = "1.6"
solana-stake-program = "1.6"
solana-transaction-status = "1.6"
thiserror = "1.0.21"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
