[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "I will find you and I will stake you"
edition = "2018"
homepage = "https://solana.com/"
documentation = "https://docs.rs/"
license = "Apache-2.0"
name = "solana-stake-o-matic"
repository = "https://github.com/solana-labs/stake-o-matic"
version = "0.0.0"

[dependencies]
bincode = "1.3.3"
borsh = "0.8"
bs58 = "0.4.0"
clap = "2.33.0"
log = "0.4.11"
regex = "1.3.9"
reqwest = { version = "0.11.3", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.13"
solana-account-decoder = "1.6.8"
solana-clap-utils = "1.6.8"
solana-client = "1.6.8"
solana-cli-config = "1.6.8"
solana-logger = "1.6.8"
solana-notifier = "1.6.8"
solana-sdk = "1.6.8"
solana-stake-program = "1.6.8"
solana-vote-program = "1.6.8"
solana-transaction-status = "1.6.8"
thiserror = "1.0.21"

spl-token = "3.1"
spl-stake-pool = "0.2"

[dev-dependencies]
indicatif = "0.15.0"
solana-validator = "1.6.8"
solana-vote-program = "1.6.8"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[profile.dev]
split-debuginfo = "unpacked"
