[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "I will find you and I will stake you"
edition = "2018"
homepage = "https://solana.com/"
documentation = "https://docs.rs/"
license = "Apache-2.0"
name = "solana-stake-o-matic"
repository = "https://github.com/solana-labs/stake-o-matic"
version = "0.0.0"
publish = false

[dependencies]
base64 = "0.13"
bincode = "1.3.3"
borsh = "0.9"
bs58 = "0.4.0"
chrono = "0.4.19"
clap = "2.33.0"
indicatif = "0.16.2"
log = "0.4.17"
openssl = "0.10"
regex = "1.5.4"
reqwest = { version = "0.11.3", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = { version = "1.0.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.13"
solana-account-decoder = "1.7.11"
solana-clap-utils = "1.7.11"
solana-cli-config = "1.7.11"
solana-client = "1.7.11"
solana-foundation-delegation-program-cli = { path = "../cli" }
solana-foundation-delegation-program-registry = { path = "../program" }
solana-logger = "1.7.11"
solana-notifier = "1.7.11"
solana-sdk = "1.7.11"
solana-transaction-status = "1.7.11"
solana-vote-program = "1.7.11"
spl-stake-pool = "0.6.1"
spl-token = "3.2"
thiserror = "1.0.25"

[dev-dependencies]
solana-validator = "1.7.11"
solana-vote-program = "1.7.11"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
