[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "I will find you and I will stake you"
edition = "2018"
homepage = "https://solana.com/"
documentation = "https://docs.rs/"
license = "Apache-2.0"
name = "solana-stake-o-matic"
repository = "https://github.com/solana-labs/stake-o-matic"
version = "0.1.0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
