[package]
name = "solana-foundation-delegation-program-cli"
version = "1.0.7"
edition = "2018"
authors = ["Solana Maintainers <maintainers@solana.org>"]
license = "Apache-2.0"
description = "Solana Foundation Delegation Program Command-line Utility"
repository = "https://github.com/solana-foundation/stake-o-matic"
readme = "README.md"

[[bin]]
name = "solana-foundation-delegation-program"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.83"
solana-account-decoder = "=1.13.6"
solana-clap-utils = "=1.13.6"
solana-cli-config = "=1.13.6"
solana-client = "=1.13.6"
solana-foundation-delegation-program-registry = { version = "1.0.1", path = "../program" }
solana-logger = "=1.13.6"
solana-remote-wallet = "=1.13.6"
solana-sdk = "=1.13.6"
tokio = { version = "1", features = ["full"] }
