[package]
name = "solana-foundation-delegation-program-cli"
version = "2.0.0"
edition = "2018"
authors = ["Solana Maintainers <maintainers@solana.org>"]
license = "Apache-2.0"
description = "Solana Foundation Delegation Program Command-line Utility"
repository = "https://github.com/solana-foundation/stake-o-matic"
readme = "README.md"

[[bin]]
name = "solana-foundation-delegation-program"
path = "src/main.rs"
