[package]
name = "solana-foundation-delegation-program-registry"
version = "1.0.1"
edition = "2018"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
description = "Solana Foundation Delegation Program Registry"
repository = "https://github.com/solana-foundation/stake-o-matic"

[dependencies]
borsh = "0.9"
borsh-derive = "0.9"
solana-program = "1.7.11"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
