[package]
name = "solana-foundation-delegation-program-registry"
version = "2.0.0"
edition = "2018"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
description = "Solana Foundation Delegation Program Registry"
repository = "https://github.com/solana-foundation/stake-o-matic"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
